Dynamic Paint weight group isn't updated unless weight has been assigned #66835

Closed
opened 2019-07-13 04:05:42 +02:00 by Leroy · 13 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2d
Worked: (optional)

Short description of error
if you worked in dynamic paint, and used weight mode, you will feel bothered, nothing will show in viewport. in 2.79x, you can preview the weight color, and easy used in modifier.

Exact steps for others to reproduce the error

Just download my .blend file, and play animation with space bar.

[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]
dp.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: `06312c6d2d` Worked: (optional) **Short description of error** if you worked in dynamic paint, and used weight mode, you will feel bothered, nothing will show in viewport. in 2.79x, you can preview the weight color, and easy used in modifier. **Exact steps for others to reproduce the error** Just download my .blend file, and play animation with space bar. [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] [dp.blend](https://archive.blender.org/developer/F7604519/dp.blend)
Author

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

just test it just for curiosity, its not only a visualization issue, it doesn't seems to be working at all.
I just added a displace to the plane and masked it with the group, works in 2.79, i also try baking the vertex group, didn't work in 2.8
imagen.png

just test it just for curiosity, its not only a visualization issue, it doesn't seems to be working at all. I just added a displace to the plane and masked it with the group, works in 2.79, i also try baking the vertex group, didn't work in 2.8 ![imagen.png](https://archive.blender.org/developer/F7605070/imagen.png)
Author

@NahuelBelich I can't determine the running situation because I can't see it. I add the mask modifier, looks good, but displace modifier seems not work.

@NahuelBelich I can't determine the running situation because I can't see it. I add the mask modifier, looks good, but displace modifier seems not work.

Added subscriber: @ZedDB

Added subscriber: @ZedDB

The viewport display is a known limitation.

I can't reproduce the display modifier not working though. So you guys will have to be a bit more descriptive:
recording.mp4

The viewport display is a known limitation. I can't reproduce the display modifier not working though. So you guys will have to be a bit more descriptive: [recording.mp4](https://archive.blender.org/developer/F7610469/recording.mp4)

Added subscriber: @FinbarrORiordan

Added subscriber: @FinbarrORiordan

This issue is that the 'dp_weight' vertex group isn't working as expected in the modifier stack for most modifiers that take a vertex group input... I've found that if you assign a single vertex to the 'dp_weight' group it seems to initialize the group and everything works... you can even remove the vertex from the group and everything still works as expected...

version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2d

This issue is that the 'dp_weight' vertex group isn't working as expected in the modifier stack for most modifiers that take a vertex group input... I've found that if you assign a single vertex to the 'dp_weight' group it seems to initialize the group and everything works... you can even remove the vertex from the group and everything still works as expected... version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: `06312c6d2d`
Sebastian Parborg self-assigned this 2019-07-15 17:05:47 +02:00
Sebastian Parborg changed title from Don't show weight group when used Dynamic Paint [2.8] to Dynamic Paint weight group isn't updated unless weight has been assigned 2019-07-15 17:37:17 +02:00

I've posed a potential fix: D5263

I've posed a potential fix: [D5263](https://archive.blender.org/developer/D5263)
Author

101.mp4
@ZedDB In my video, you can see, the dynamic is worked with mask and wireframe modifier, but nothing with displace modifier, it's Strangely.

[101.mp4](https://archive.blender.org/developer/F7612323/101.mp4) @ZedDB In my video, you can see, the dynamic is worked with mask and wireframe modifier, but nothing with displace modifier, it's Strangely.

This issue was referenced by c4a62493de

This issue was referenced by c4a62493de17cc5f8a87be719b0164d26851e721

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks @ZedDB

Thanks @ZedDB
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66835
No description provided.