Fix T66835: Dynamic Paint weight group isn't updated unless weight has been assigned

The dvert layer was not assigned to the mesh data if it had to be
created by the dpaint modifier.

Reviewed By: Brecht

Differential Revision: http://developer.blender.org/D5263