source/blender/blenkernel/intern/dynamicpaint.c
@@ -2023,6 +2023,8 @@ static Mesh *dynamicPaint_Modifier_apply(DynamicPaintModifierData *pmd, Object *
             if (defgrp_index != -1 && !dvert && (surface->output_name[0] != '\0')) {
               dvert = CustomData_add_layer(
                   &result->vdata, CD_MDEFORMVERT, CD_CALLOC, NULL, sData->total_points);
+              /* Make the dvert layer easily accessible from the mesh data. */
+              result->dvert = dvert;
             }
             if (defgrp_index != -1 && dvert) {
               int i;
